# Dungoni

./: Cargo.toml  README.md
src/: communication.rs  game.rs  gamedata.rs  main.rs
texts/: enter_camp.txt  enter_dungeon.txt  escape_passage.txt  exit_game.txt  finish_dungeon.txt  fled.txt  gameover.txt  help.txt  new_game.txt  resume_game.txt  welcome.txt  win.txt
texts/dungeon/: big_monster.txt  big_room.txt  final_room.txt  flee.txt  give_up.txt  hide.txt  no_stamina.txt  small_monster.txt  small_room.txt  treasure_room.txt  win.txt
texts/help/: about  combat  cooking  explore  intro  shop  stats
