[package]
name = "dungoni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
enable-ansi-support = "0.2.1"
rand = "0.8.5"
serde = { version = "1.0.130", features = ["derive"] }
rust-embed="6.6.1"
clearscreen = "2.0.1"